--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                     '0%, 100%': { transform: 'translateY(0)' },
                     '50%': { transform: 'translateY(-10px)' }
                 },
+                wave: {
+                    '0%': { transform: 'translateX(0)' },
+                    '100%': { transform: 'translateX(-512px)' }
+                },
                 'slide-up': {
                     '0%': { transform: 'translateY(20px)', opacity: '0' },
                     '100%': { transform: 'translateY(0)', opacity: '1' }
@@ -66,6 +70,7 @@
                 pop: 'pop 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards',
                 shake: 'shake 0.3s ease-in-out',
                 float: 'float 6s ease-in-out infinite',
+                wave: 'wave 4s linear infinite',
                 'slide-up': 'slide-up 0.5s ease-out forwards',
                 'slide-in-right': 'slide-in-right 0.4s ease-out forwards',
                 'fade-in-scale': 'fade-in-scale 0.3s ease-out forwards'
