--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
                 'fade-in-scale': {
                     '0%': { transform: 'scale(0.95)', opacity: '0' },
                     '100%': { transform: 'scale(1)', opacity: '1' }
+                },
+                'fire-glow': {
+                    '0%, 100%': { 
+                      transform: 'scale(1)', 
+                      filter: 'brightness(1) drop-shadow(0 0 2px #ff4500) drop-shadow(0 0 5px #ff8c00)' 
+                    },
+                    '50%': { 
+                      transform: 'scale(1.08)', 
+                      filter: 'brightness(1.3) drop-shadow(0 0 10px #ff4500) drop-shadow(0 0 20px #ff0000)' 
+                    }
                 }
             },
             animation: {
@@ -73,7 +83,8 @@
                 wave: 'wave 4s linear infinite',
                 'slide-up': 'slide-up 0.5s ease-out forwards',
                 'slide-in-right': 'slide-in-right 0.4s ease-out forwards',
-                'fade-in-scale': 'fade-in-scale 0.3s ease-out forwards'
+                'fade-in-scale': 'fade-in-scale 0.3s ease-out forwards',
+                'fire-glow': 'fire-glow 0.8s infinite ease-in-out'
             }
           }
         }
